.deploy/k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_BACKEND_API
              value: http://localhost:80/api
          image: punkrelique/poster-frontend
          name: frontend
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app:
      frontend
  type: LoadBalancer
