.deploy/k8s/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ctl
spec:
  rules:
    - host: poster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
